<resources>
    <string name="app_name">POWERT Source-LI</string>
    <string name="recognition">Recognize</string>
    <string name="version">"Use version: "</string>
    <string-array name="models">
        <item>Low</item>
        <item>High</item>
        <item>Combined</item>
    </string-array>
    <string-array name="encodings">
        <item>characters</item>
        <item>bits</item>
    </string-array>
    <string name="message_store">The last registration is saved in </string>
    <string name="duration_t">times</string>
    <string name="duration_s">seconds</string>
    <string name="duration_ms">milliseconds</string>
    <string name="times">#</string>
    <string name="seconds">s</string>
    <string name="millis">ms</string>
    <string name="one">1</string>
    <string name="ten">10000</string>
    <string name="hundred">100</string>
    <string name="repeat">Repeat for: </string>
    <string name="alternate">Alternate for: </string>
    <string name="wait">Wait after each iteration for: </string>
    <string name="PoC">PoC</string>
    <string name="debug">Debug</string>
    <string name="send">Send a message</string>
    <string name="message">Type here the message to send to sink</string>
    <string name="standard">Standard\n encoding</string>
    <string name="random">Random</string>
    <string name="time">Time for a bit </string>
    <string name="bitsynch">Bit for synchronization </string>
    <string name="startwait">100</string>
    <string name="startrandom">6</string>
    <string name="longstream">40</string>
    <string name="manchester">Manchester\n encoding</string>
    <string name="encoding">Message encoding </string>
    <string name="stop">Stop</string>
</resources>
